--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
+::-webkit-scrollbar{
+  display: none;
+}
+
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #f7f0f0;
+  width: 100%;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.vd__header{
+  width: 100%;
+  height: 4rem;
+  background: #f8f4f4;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 1px 4px 2px rgb(228, 221, 221);
 }
 
-.App-link {
-  color: #61dafb;
+.vd__App-section{
+  width: 45rem;
+  height: 80%;
+  margin: 1rem auto;
+  display: flex;
+}
+.vd__profile-section{
+ 
+}
+.vd__videos-section{
+  width: 80%;
+  scroll-behavior: smooth;
+  overflow: scroll;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:550px){
+  .vd__App-section{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem .3rem;
   }
-  to {
-    transform: rotate(360deg);
+  .vd__videos-section{
+      height: 100%;
+      border-radius: 1rem;
+      padding-top: .5rem ;
   }
 }
